HVAC Backup 2/objects/Branch__c(1).object
<CustomObject>
    <fields>
        <fullName>AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <externalId>true</externalId>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFM_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EFM Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional EFM Operation Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_MCO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SDH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Office</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ServiceAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ServiceRM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SDE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Location.Is_Virtual__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Location.Warehouse_Type__c</field>
                <operation>equals</operation>
                <value>NPC, RPC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch_Code__c</columns>
        <columns>Warehouse__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Region__c</columns>
        <columns>Service_AM__c</columns>
        <columns>Service_RM__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>